// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en el componente GifExpertApp Debe mostrar una lista de categorias 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2>
        GifExpertApp
      </h2>
      <form
        data-testid="form"
      >
        <input
          type="text"
          value=""
        />
      </form>
      <hr />
      <ol>
        <h3
          class="animate__animated animate__bounce"
        >
          Naruto
        </h3>
        <p
          class="animate__animated animate__flash"
          data-testid="carga"
        >
          Loading ...
        </p>
        <div
          class="card-grid"
        />
        <h3
          class="animate__animated animate__bounce"
        >
          Dragon Ball
        </h3>
        <p
          class="animate__animated animate__flash"
          data-testid="carga"
        >
          Loading ...
        </p>
        <div
          class="card-grid"
        />
        <h3
          class="animate__animated animate__bounce"
        >
          One Punch
        </h3>
        <p
          class="animate__animated animate__flash"
          data-testid="carga"
        >
          Loading ...
        </p>
        <div
          class="card-grid"
        />
        <h3
          class="animate__animated animate__bounce"
        >
          Marvel
        </h3>
        <p
          class="animate__animated animate__flash"
          data-testid="carga"
        >
          Loading ...
        </p>
        <div
          class="card-grid"
        />
      </ol>
    </div>
  </body>,
  "container": <div>
    <h2>
      GifExpertApp
    </h2>
    <form
      data-testid="form"
    >
      <input
        type="text"
        value=""
      />
    </form>
    <hr />
    <ol>
      <h3
        class="animate__animated animate__bounce"
      >
        Naruto
      </h3>
      <p
        class="animate__animated animate__flash"
        data-testid="carga"
      >
        Loading ...
      </p>
      <div
        class="card-grid"
      />
      <h3
        class="animate__animated animate__bounce"
      >
        Dragon Ball
      </h3>
      <p
        class="animate__animated animate__flash"
        data-testid="carga"
      >
        Loading ...
      </p>
      <div
        class="card-grid"
      />
      <h3
        class="animate__animated animate__bounce"
      >
        One Punch
      </h3>
      <p
        class="animate__animated animate__flash"
        data-testid="carga"
      >
        Loading ...
      </p>
      <div
        class="card-grid"
      />
      <h3
        class="animate__animated animate__bounce"
      >
        Marvel
      </h3>
      <p
        class="animate__animated animate__flash"
        data-testid="carga"
      >
        Loading ...
      </p>
      <div
        class="card-grid"
      />
    </ol>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Prueba en el componente GifExpertApp Debe renderizar correctamente el componente 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2>
        GifExpertApp
      </h2>
      <form
        data-testid="form"
      >
        <input
          type="text"
          value=""
        />
      </form>
      <hr />
      <ol />
    </div>
  </body>,
  "container": <div>
    <h2>
      GifExpertApp
    </h2>
    <form
      data-testid="form"
    >
      <input
        type="text"
        value=""
      />
    </form>
    <hr />
    <ol />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
